added several evaluation metrics for hdbscan output

--- a/Clustering/Dim_Reduction_UMAP.ipynb
+++ b/Clustering/Dim_Reduction_UMAP.ipynb
@@ -171,7 +171,8 @@
     "# --- RUN HDBSCAN ---\n",
     "clusterer = hdbscan.HDBSCAN(\n",
     "    min_cluster_size=30,  # smaller clusters allowed\n",
-    "    min_samples=10        # fewer points needed to avoid noise\n",
+    "    min_samples=10,        # fewer points needed to avoid noise\n",
+    "    gen_min_span_tree=True\n",
     ")\n",
     "cluster_labels = clusterer.fit_predict(all_embeds)\n",
     "counts = Counter(cluster_labels)\n",
@@ -439,12 +440,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "18",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Evaluation Metrics"
+   ]
   },
   {
    "cell_type": "code",
@@ -452,7 +453,80 @@
    "id": "19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import silhouette_score, calinski_harabasz_score, davies_bouldin_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- EVALUATION METRICS ---\n",
+    "\n",
+    "# Filter out noise points (-1) for metrics that require labels\n",
+    "mask = cluster_labels != -1\n",
+    "X_no_noise = all_embeds[mask]\n",
+    "labels_no_noise = cluster_labels[mask]\n",
+    "\n",
+    "# Silhouette Score (O(n^2))\n",
+    "silhouette = None\n",
+    "if len(set(labels_no_noise)) > 1:  # need at least 2 clusters\n",
+    "    silhouette = silhouette_score(X_no_noise, labels_no_noise)\n",
+    "else:\n",
+    "    silhouette = float(\"nan\")\n",
+    "\n",
+    "# Calinski–Harabasz Index (O(n))\n",
+    "ch_index = None\n",
+    "if len(set(labels_no_noise)) > 1:\n",
+    "    ch_index = calinski_harabasz_score(X_no_noise, labels_no_noise)\n",
+    "else:\n",
+    "    ch_index = float(\"nan\")\n",
+    "\n",
+    "# Davies–Bouldin Index (O(n^2))\n",
+    "db_index = None\n",
+    "if len(set(labels_no_noise)) > 1:\n",
+    "    db_index = davies_bouldin_score(X_no_noise, labels_no_noise)\n",
+    "else:\n",
+    "    db_index = float(\"nan\")\n",
+    "\n",
+    "# Dunn Index (O(n^2)) - custom implementation\n",
+    "def dunn_index(X, labels):\n",
+    "    unique_labels = np.unique(labels)\n",
+    "    clusters = [X[labels == l] for l in unique_labels]\n",
+    "\n",
+    "    # Compute inter-cluster distances (min between any two clusters)\n",
+    "    min_inter = float(\"inf\")\n",
+    "    for i in range(len(clusters)):\n",
+    "        for j in range(i+1, len(clusters)):\n",
+    "            dist = np.linalg.norm(clusters[i][:, None, :] - clusters[j][None, :, :], axis=2)\n",
+    "            min_inter = min(min_inter, dist.min())\n",
+    "\n",
+    "    # Compute intra-cluster diameters (max within each cluster)\n",
+    "    max_intra = 0\n",
+    "    for cluster in clusters:\n",
+    "        if len(cluster) > 1:\n",
+    "            dist = np.linalg.norm(cluster[:, None, :] - cluster[None, :, :], axis=2)\n",
+    "            max_intra = max(max_intra, dist.max())\n",
+    "\n",
+    "    return min_inter / max_intra if max_intra > 0 else float(\"nan\")\n",
+    "\n",
+    "dunn = None\n",
+    "if len(set(labels_no_noise)) > 1:\n",
+    "    dunn = dunn_index(X_no_noise, labels_no_noise)\n",
+    "else:\n",
+    "    dunn = float(\"nan\")\n",
+    "\n",
+    "# HDBSCAN-specific metrics\n",
+    "relative_validity = clusterer.relative_validity_   # O(n log n), MST-based\n",
+    "persistence = clusterer.cluster_persistence_       # O(n log n), MST-based\n",
+    "\n",
+    "# --- PRINT SUMMARY ---\n",
+    "print(\"\\n=== Clustering Evaluation Metrics ===\")\n",
+    "print(f\"Silhouette Score (O(n^2)): {silhouette:.4f}\")\n",
+    "print(f\"Calinski–Harabasz Index (O(n)): {ch_index:.4f}\")\n",
+    "print(f\"Davies–Bouldin Index (O(n^2)): {db_index:.4f}\")\n",
+    "print(f\"Dunn Index (O(n^2)): {dunn:.4f}\")\n",
+    "print(f\"Relative Validity (DBCV approx, O(n log n)): {relative_validity:.4f}\")\n",
+    "print(\"Cluster Persistence (O(n log n)) per cluster:\")\n",
+    "for cid, pers in enumerate(persistence):\n",
+    "    print(f\"  Cluster {cid}: {pers:.3f}\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -479,8 +553,80 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32",
    "metadata": {},
    "source": [
     "# HDBSCAN Centroids -> Distance Clusters (with no noise)"
@@ -489,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -609,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
