added random vectors to prove clustering is legitimate

--- a/Clustering/Dim_Reduction_UMAP.ipynb
+++ b/Clustering/Dim_Reduction_UMAP.ipynb
@@ -534,7 +534,218 @@
    "id": "20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- Baseline & significance testing for clustering metrics ---\n",
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "import umap\n",
+    "import hdbscan\n",
+    "from sklearn.metrics import silhouette_score, calinski_harabasz_score, davies_bouldin_score\n",
+    "from collections import defaultdict\n",
+    "import math\n",
+    "import random\n",
+    "\n",
+    "# --- utilities: metric computation (expects X and labels) ---\n",
+    "def compute_metrics(X, labels, clusterer=None, subsample_for_silhouette=20000, random_state=0):\n",
+    "    out = {}\n",
+    "    # remove noise for label-based metrics that expect labeled clusters\n",
+    "    mask = labels != -1\n",
+    "    X_no_noise = X[mask]\n",
+    "    labels_no_noise = labels[mask]\n",
+    "\n",
+    "    # Silhouette (O(n^2)) — subsample if too big\n",
+    "    if len(labels_no_noise) > 1:\n",
+    "        if len(labels_no_noise) > subsample_for_silhouette:\n",
+    "            rng = np.random.RandomState(random_state)\n",
+    "            idx = rng.choice(len(labels_no_noise), subsample_for_silhouette, replace=False)\n",
+    "            sil = silhouette_score(X_no_noise[idx], labels_no_noise[idx])\n",
+    "        else:\n",
+    "            sil = silhouette_score(X_no_noise, labels_no_noise)\n",
+    "    else:\n",
+    "        sil = float(\"nan\")\n",
+    "    out['silhouette'] = sil\n",
+    "\n",
+    "    # Calinski-Harabasz (O(n))\n",
+    "    try:\n",
+    "        ch = calinski_harabasz_score(X_no_noise, labels_no_noise) if len(set(labels_no_noise)) > 1 else float(\"nan\")\n",
+    "    except Exception:\n",
+    "        ch = float(\"nan\")\n",
+    "    out['calinski_harabasz'] = ch\n",
+    "\n",
+    "    # Davies-Bouldin (O(n^2))\n",
+    "    try:\n",
+    "        db = davies_bouldin_score(X_no_noise, labels_no_noise) if len(set(labels_no_noise)) > 1 else float(\"nan\")\n",
+    "    except Exception:\n",
+    "        db = float(\"nan\")\n",
+    "    out['davies_bouldin'] = db\n",
+    "\n",
+    "    # Dunn index (O(n^2)) — simple implementation, on the no-noise subset\n",
+    "    def dunn_index(Xc, labs):\n",
+    "        unique = np.unique(labs)\n",
+    "        clusters = [Xc[labs == u] for u in unique]\n",
+    "        # inter-cluster min distance\n",
+    "        min_inter = float(\"inf\")\n",
+    "        for i in range(len(clusters)):\n",
+    "            for j in range(i+1, len(clusters)):\n",
+    "                if len(clusters[i]) and len(clusters[j]):\n",
+    "                    d = np.linalg.norm(clusters[i][:, None, :] - clusters[j][None, :, :], axis=2)\n",
+    "                    min_inter = min(min_inter, d.min())\n",
+    "        # intra-cluster max diameter\n",
+    "        max_intra = 0\n",
+    "        for c in clusters:\n",
+    "            if len(c) > 1:\n",
+    "                d = np.linalg.norm(c[:, None, :] - c[None, :, :], axis=2)\n",
+    "                max_intra = max(max_intra, d.max())\n",
+    "        return min_inter / max_intra if max_intra > 0 and math.isfinite(min_inter) else float(\"nan\")\n",
+    "\n",
+    "    try:\n",
+    "        dunn = dunn_index(X_no_noise, labels_no_noise) if len(set(labels_no_noise)) > 1 else float(\"nan\")\n",
+    "    except Exception:\n",
+    "        dunn = float(\"nan\")\n",
+    "    out['dunn'] = dunn\n",
+    "\n",
+    "    # HDBSCAN-specific if clusterer provided (fallback to clusterer if not provided, else nan)\n",
+    "    if clusterer is not None:\n",
+    "        out['relative_validity'] = getattr(clusterer, 'relative_validity_', float(\"nan\"))\n",
+    "        out['persistence_mean'] = np.mean(getattr(clusterer, 'cluster_persistence_', [float(\"nan\")]))\n",
+    "    else:\n",
+    "        out['relative_validity'] = float(\"nan\")\n",
+    "        out['persistence_mean'] = float(\"nan\")\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "# --- Null data generators ---\n",
+    "def gaussian_null(n_samples, n_features, mean=None, std=None, seed=None):\n",
+    "    rng = np.random.RandomState(seed)\n",
+    "    if mean is None: mean = 0.0\n",
+    "    if std is None: std = 1.0\n",
+    "    return rng.normal(loc=mean, scale=std, size=(n_samples, n_features))\n",
+    "\n",
+    "def permuted_features_null(X, seed=None):\n",
+    "    rng = np.random.RandomState(seed)\n",
+    "    X_perm = X.copy()\n",
+    "    # permute each column independently\n",
+    "    for c in range(X_perm.shape[1]):\n",
+    "        rng.shuffle(X_perm[:, c])\n",
+    "    return X_perm\n",
+    "\n",
+    "def embedding_space_null(embeddings, seed=None):\n",
+    "    # match per-dimension mean/std\n",
+    "    rng = np.random.RandomState(seed)\n",
+    "    mu = embeddings.mean(axis=0)\n",
+    "    sigma = embeddings.std(axis=0, ddof=1)\n",
+    "    # avoid zero std\n",
+    "    sigma[sigma == 0] = 1.0\n",
+    "    return rng.normal(loc=mu[None, :], scale=sigma[None, :], size=embeddings.shape)\n",
+    "\n",
+    "# --- End-to-end pipeline function: PCA -> UMAP -> HDBSCAN -> metrics ---\n",
+    "def pipeline_and_metrics(X_highdim,\n",
+    "                         pca_n=50, umap_n=10,\n",
+    "                         umap_params=None,\n",
+    "                         hdbscan_params=None,\n",
+    "                         compute_clusterer_obj=True,\n",
+    "                         random_state=0):\n",
+    "    # PCA\n",
+    "    pca = PCA(n_components=min(pca_n, X_highdim.shape[1]), random_state=random_state)\n",
+    "    X_pca = pca.fit_transform(X_highdim)\n",
+    "\n",
+    "    # UMAP\n",
+    "    umap_params = umap_params or {}\n",
+    "    umap_params = dict({'n_components': umap_n, 'random_state': random_state}, **umap_params)\n",
+    "    reducer = umap.UMAP(**umap_params)\n",
+    "    X_umap = reducer.fit_transform(X_pca)\n",
+    "\n",
+    "    # HDBSCAN\n",
+    "    hdbscan_params = hdbscan_params or {}\n",
+    "    params = dict({'min_cluster_size': 30, 'min_samples': 10}, **hdbscan_params)\n",
+    "    clusterer = hdbscan.HDBSCAN(**params)\n",
+    "    labels = clusterer.fit_predict(X_umap)\n",
+    "\n",
+    "    metrics = compute_metrics(X_umap, labels, clusterer=clusterer, random_state=random_state)\n",
+    "    metrics['n_clusters'] = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "    metrics['n_noise'] = int((labels == -1).sum())\n",
+    "    metrics['X_umap'] = X_umap  # optionally return embedding\n",
+    "    metrics['labels'] = labels\n",
+    "    metrics['clusterer_obj'] = clusterer if compute_clusterer_obj else None\n",
+    "    return metrics\n",
+    "\n",
+    "# --- Runner to produce null distributions ---\n",
+    "def null_experiment(X_highdim=None,\n",
+    "                    embeddings_if_no_highdim=None,\n",
+    "                    n_trials=50,\n",
+    "                    null_type='permuted',   # 'gaussian', 'permuted', 'embedding_gaussian'\n",
+    "                    pca_n=50,\n",
+    "                    umap_n=10,\n",
+    "                    umap_params=None,\n",
+    "                    hdbscan_params=None,\n",
+    "                    random_seed_start=0):\n",
+    "    results = []\n",
+    "    rng = np.random.RandomState(random_seed_start)\n",
+    "    for t in range(n_trials):\n",
+    "        seed = int(rng.randint(0, 2**31-1))\n",
+    "        if null_type == 'gaussian':\n",
+    "            if X_highdim is None:\n",
+    "                raise ValueError(\"Provide X_highdim for gaussian null in original space.\")\n",
+    "            Xnull = gaussian_null(X_highdim.shape[0], X_highdim.shape[1], seed=seed)\n",
+    "            res = pipeline_and_metrics(Xnull, pca_n=pca_n, umap_n=umap_n, umap_params=umap_params,\n",
+    "                                       hdbscan_params=hdbscan_params, random_state=seed)\n",
+    "        elif null_type == 'permuted':\n",
+    "            if X_highdim is None:\n",
+    "                raise ValueError(\"Provide X_highdim for permuted-feature null.\")\n",
+    "            Xnull = permuted_features_null(X_highdim, seed=seed)\n",
+    "            res = pipeline_and_metrics(Xnull, pca_n=pca_n, umap_n=umap_n, umap_params=umap_params,\n",
+    "                                       hdbscan_params=hdbscan_params, random_state=seed)\n",
+    "        elif null_type == 'embedding_gaussian':\n",
+    "            if embeddings_if_no_highdim is None:\n",
+    "                raise ValueError(\"Provide embeddings_if_no_highdim for embedding-space null.\")\n",
+    "            EmbNull = embedding_space_null(embeddings_if_no_highdim, seed=seed)\n",
+    "            # Skip PCA/UMAP if we already operate in embedding space; directly HDBSCAN\n",
+    "            clusterer = hdbscan.HDBSCAN(**(hdbscan_params or {}))\n",
+    "            labels = clusterer.fit_predict(EmbNull)\n",
+    "            res = compute_metrics(EmbNull, labels, clusterer=clusterer, random_state=seed)\n",
+    "            res['n_clusters'] = len(set(labels)) - (1 if -1 in labels else 0)\n",
+    "            res['n_noise'] = int((labels == -1).sum())\n",
+    "        else:\n",
+    "            raise ValueError(\"unknown null_type\")\n",
+    "        results.append(res)\n",
+    "    return results\n",
+    "\n",
+    "# --- Example usage ---\n",
+    "# Option A: if you still have original 512-D data in variable X512 (n_samples x 512), use:\n",
+    "# nulls = null_experiment(X_highdim=X512, n_trials=50, null_type='permuted', pca_n=50, umap_n=10)\n",
+    "\n",
+    "# Option B: if you only have your UMAP embeddings (all_embeds used for HDBSCAN),\n",
+    "# run embedding-space null (fast):\n",
+    "# nulls = null_experiment(embeddings_if_no_highdim=all_embeds, n_trials=100, null_type='embedding_gaussian',\n",
+    "#                         hdbscan_params={'min_cluster_size':30, 'min_samples':10})\n",
+    "\n",
+    "# --- Summarize null distribution and compare your real metrics ---\n",
+    "def summarize_nulls(null_results, real_metrics):\n",
+    "    keys = ['silhouette', 'calinski_harabasz', 'davies_bouldin', 'dunn', 'relative_validity', 'persistence_mean']\n",
+    "    summary = {}\n",
+    "    for k in keys:\n",
+    "        vals = np.array([r[k] for r in null_results if not np.isnan(r[k])])\n",
+    "        if vals.size == 0:\n",
+    "            summary[k] = {'null_mean': float('nan'), 'null_std': float('nan'), 'z': float('nan'), 'p_empirical': float('nan')}\n",
+    "            continue\n",
+    "        mu, sd = vals.mean(), vals.std(ddof=1)\n",
+    "        real = real_metrics.get(k, float('nan'))\n",
+    "        z = (real - mu) / sd if sd > 0 and not math.isnan(real) else float('nan')\n",
+    "        # empirical p-value (one-sided depending on metric direction)\n",
+    "        if k in ['davies_bouldin']:  # lower is better\n",
+    "            p_emp = np.mean(vals <= real)\n",
+    "        else:  # higher is better\n",
+    "            p_emp = np.mean(vals >= real)\n",
+    "        summary[k] = {'null_mean': mu, 'null_std': sd, 'real': real, 'z': z, 'p_empirical': p_emp}\n",
+    "    return summary\n",
+    "\n",
+    "# Example: run a quick embedding-space null test (fast) if you only have your UMAP embeddings:\n",
+    "nulls = null_experiment(embeddings_if_no_highdim=all_embeds, n_trials=100, null_type='embedding_gaussian',\n",
+    "                        hdbscan_params={'min_cluster_size':30, 'min_samples':10})\n",
+    "real_metrics = compute_metrics(all_embeds, cluster_labels, clusterer=clusterer)\n",
+    "summary = summarize_nulls(nulls, real_metrics)\n",
+    "print(summary)\n"
+   ]
   },
   {
    "cell_type": "code",
