added per frame metadata in batch to identify embeddings

--- a/Clustering/Batch.ipynb
+++ b/Clustering/Batch.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "# --- INITIALIZE ---\n",
     "current_batch = []\n",
+    "current_meta = []   # store filenames/frame info\n",
     "batch_counter = 0\n",
     "\n",
     "# Iterate over all .pt files\n",
@@ -27,23 +28,33 @@
     "    data = torch.load(pt_file, weights_only=True)\n",
     "    embeddings = data[extractor]  # shape: [num_frames, embedding_dim]\n",
     "\n",
-    "    for frame_emb in embeddings:\n",
-    "        current_batch.append(frame_emb.unsqueeze(0))  # keep as 2D [1, dim]\n",
-    "        \n",
+    "    for frame_idx, frame_emb in enumerate(embeddings):\n",
+    "        current_batch.append(frame_emb.unsqueeze(0))  # keep as [1, dim]\n",
+    "        current_meta.append((pt_file.name, frame_idx))  # filename + frame index\n",
+    "\n",
     "        # When batch_size reached, save batch\n",
     "        if len(current_batch) >= batch_size:\n",
     "            batch_tensor = torch.cat(current_batch, dim=0)  # [batch_size, dim]\n",
     "            out_file = output_folder / f\"batch_{batch_counter:05d}.pt\"\n",
-    "            torch.save(batch_tensor, out_file)\n",
+    "\n",
+    "            # Save as a dict with embeddings + metadata\n",
+    "            torch.save(\n",
+    "                {\"embeddings\": batch_tensor, \"meta\": current_meta},\n",
+    "                out_file\n",
+    "            )\n",
     "            print(f\"Saved {out_file} ({batch_tensor.shape[0]} frames)\")\n",
     "            batch_counter += 1\n",
     "            current_batch = []\n",
+    "            current_meta = []\n",
     "\n",
     "# Save any leftover frames\n",
     "if current_batch:\n",
     "    batch_tensor = torch.cat(current_batch, dim=0)\n",
     "    out_file = output_folder / f\"batch_{batch_counter:05d}.pt\"\n",
-    "    torch.save(batch_tensor, out_file)\n",
+    "    torch.save(\n",
+    "        {\"embeddings\": batch_tensor, \"meta\": current_meta},\n",
+    "        out_file\n",
+    "    )\n",
     "    print(f\"Saved {out_file} ({batch_tensor.shape[0]} frames)\")\n"
    ]
   },
@@ -54,18 +65,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- CONFIG ---\n",
-    "file_path = Path(\"../Results/EmbeddingDataBatched/resnet34/batch_00000.pt\")\n",
+    "import torch\n",
+    "from pathlib import Path\n",
     "\n",
-    "# --- LOAD ---\n",
-    "batch_tensor = torch.load(file_path, weights_only=True)\n",
+    "# --- CONFIGURATION ---\n",
+    "batch_folder = Path(\"../Results/EmbeddingDataBatched/resnet34\")\n",
     "\n",
-    "# --- VERIFY ---\n",
-    "print(f\"Type: {type(batch_tensor)}\")\n",
-    "print(f\"Shape: {batch_tensor.shape}\")\n",
-    "print(f\"Dtype: {batch_tensor.dtype}\")\n",
-    "print(f\"First 3 embeddings:\\n{batch_tensor[:3]}\")  # print first 3 frames\n",
-    "print(f\"Min/max values: {batch_tensor.min().item():.6f} / {batch_tensor.max().item():.6f}\")"
+    "# Pick a batch file (e.g., the first one)\n",
+    "batch_file = sorted(batch_folder.glob(\"batch_*.pt\"))[0]\n",
+    "\n",
+    "# Load the saved dictionary\n",
+    "data = torch.load(batch_file)\n",
+    "\n",
+    "embeddings = data[\"embeddings\"]  # tensor [N, dim]\n",
+    "meta = data[\"meta\"]              # list of (filename, frame_idx)\n",
+    "\n",
+    "print(f\"Loaded batch: {batch_file}\")\n",
+    "print(f\"Embeddings shape: {embeddings.shape}\")\n",
+    "print(f\"Number of metadata entries: {len(meta)}\")\n",
+    "\n",
+    "# Print a few sample entries\n",
+    "for i in range(5):  # first 5 examples\n",
+    "    print(f\"Entry {i}:\")\n",
+    "    print(f\"  Source file: {meta[i][0]}\")\n",
+    "    print(f\"  Frame index: {meta[i][1]}\")\n",
+    "    print(f\"  Embedding (first 5 values): {embeddings[i, :5].tolist()}\")\n"
    ]
   },
   {
